--- a/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ingrediente" asp-action="Crear">Crear Ingrediente</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ingrediente" asp-action="Listar">Listar Ingredientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Receta" asp-action="Crear">Crear Receta</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Receta" asp-action="Listar">Listar Receta</a>
+                        </li>
                        
                     </ul>
                 </div>
