--- a/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
@@ -23,10 +23,16 @@
                 <td>@receta.Descripcion</td>
                 <td>
                     <ul>
-                        @foreach (var ingrediente in receta.ListarIngredientes)
-                        {
-                            <li>@ingrediente.NombreDelIngrediente</li>
-                        }
+                   
+                            @foreach (var ingrediente in ViewBag.IngredientesDisponibles)
+                            {
+                                <li>
+                                    
+                                    @ingrediente.NombreDelIngrediente
+                                </li>
+                            }
+                        
+                   
                     </ul>
                 </td>
             </tr>
