--- a/RecetasDeCocina.Web/Views/Receta/SeleccionarIngredientes.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/SeleccionarIngredientes.cshtml
@@ -15,7 +15,7 @@
         <div>
             <label>
                 @Html.CheckBox("ingredientesSeleccionados", false, new { value = ingrediente.Id })
-                @ingrediente.NombreDelIngrediente
+                @ingrediente.Nombre
             </label>
         </div>
     }
