--- a/RecetasDeCocina.Web/Views/Ingrediente/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Ingrediente/Listar.cshtml
@@ -20,8 +20,8 @@
         @foreach (var ingrediente in Model)
         {
             <tr>
-                <td>@ingrediente.NombreDelIngrediente</td>
-                <td>@ingrediente.CategoriaDelIngrediente</td>
+                <td>@ingrediente.Nombre</td>
+                <td>@ingrediente.Categoria</td>
                 <td>@ingrediente.Descripcion</td>
                 <td>@ingrediente.Gramos</td>
             </tr>
