--- a/RecetasDeCocina.Web/Views/Receta/Crear.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Crear.cshtml
@@ -17,7 +17,7 @@
         <input asp-for="Descripcion" class="form-control" />
         <span asp-validation-for="Descripcion" class="text-danger"></span>
     </div>
-
+    <div class="form-group">
     <label asp-for="ListaIngredientes">Ingredientes</label>
             @foreach (var ingrediente in ViewBag.IngredientesDisponibles)
             {
