--- a/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
@@ -24,6 +24,7 @@
                         <th>Tipo</th>
                         <th>País</th>
                         <th>Dificultad</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -45,6 +46,15 @@
                             <td>@receta.TipoDePlato</td>
                             <td>@receta.PaisDeOrigen</td>
                             <td>@receta.Dificultad</td>
+                                    <td>
+                                        <form action="/Usuario/GuardarRecetaFav" method="post">
+                                            <input type="hidden" name="idReceta" value="@receta.Id" /> 
+                                            <button type="submit" class="btn btn-primary">Agregar a favoritas</button>
+                                        </form>
+
+                                    </td>
+                        
+
                         </tr>
                     }
                 </tbody>
