--- a/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Receta" asp-action="Listar">Listar Receta</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="MisRecetasFavoritas">Recetas favoritas</a>
+                        </li>
                        
                     </ul>
                 </div>
