filtro ingredientes sin andar

--- a/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
@@ -17,8 +17,10 @@
                 <partial name="/Views/Shared/_ComboTipoDeComida.cshtml">
                 <partial name="/Views/Shared/_ComboPais.cshtml">
                 <partial name="/Views/Shared/_ComboDificultad.cshtml">
+                <!--<partial name="/Views/Shared/_ComboIngrediente.cshtml">-->
                 <input type="submit" value="Filtrar"/>
             </div>
+        </form>
             <div class="form-horizontal">
                     <table class="table">
                         <thead>
@@ -55,7 +57,6 @@
                         </tbody>
                     </table>
             </div>
-        </form>
     </div>
 </div>
 
