Ahora todo funciona
Me falta la personalizacion

--- a/RecetasDeCocina.Web/Views/Shared/_ComboPais.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_ComboPais.cshtml
@@ -1,4 +1,4 @@
-﻿@using RecetasDeCocina.Data.Models
+﻿﻿@using RecetasDeCocina.Data.Models
 
 <select id="PaisDeOrigen" name="PaisDeOrigen">
     <option>País</option>
