--- a/RecetasDeCocina.Web/Views/Shared/_ComboTipoDeComida.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_ComboTipoDeComida.cshtml
@@ -1,4 +1,4 @@
-﻿@using RecetasDeCocina.Data.Models
+﻿﻿@using RecetasDeCocina.Data.Models
 
 <select id="TipoDePlato" name="TipoDePlato">
     <option>Tipo</option>
