--- a/RecetasDeCocina.Web/Views/Receta/SeleccionarIngredientes.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/SeleccionarIngredientes.cshtml
@@ -1,4 +1,4 @@
-﻿@using RecetasDeCocina.Data.Models
+﻿﻿@using RecetasDeCocina.Data.Models
 @model Receta
 
 
@@ -22,6 +22,3 @@
 
     <input type="submit" value="Agregar Ingredientes" />
 }
-
-
-
