Ya funciona lo de generacion de recetas personalizadas
falta modificar la vista

--- a/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
+++ b/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
@@ -29,14 +29,12 @@
                 <td>
                     <ul>
 
-                        @foreach (var ingrediente in ViewBag.IngredientesDisponibles)
+                        @foreach (var ingrediente in @receta.ListaIngredientes)
                         {
                             <li>
-
-                                @ingrediente.NombreDelIngrediente
+                                @ingrediente.Nombre
                             </li>
                         }
-
 
                     </ul>
                 </td>
@@ -44,3 +42,6 @@
         }
     </tbody>
 </table>
+
+
+
