--- a/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
+++ b/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
@@ -7,11 +7,51 @@
 
 <h2>@ViewData["Title"]</h2>
 
-@foreach (var receta in ViewBag.RecetasPersonalizadas)
-{
-    
-}
 
+<div class="form-horizontal">
+    <hr />
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Título</th>
+                            <th>Descripción</th>
+                            <th>Ingredientes</th>
+                            <th>Tipo</th>
+                            <th>País</th>
+                            <th>Dificultad</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var receta in ViewBag.RecetasPersonalizadas)
+                        {
+                            <tr>
+                                <td>@receta.Titulo</td>
+                                <td>@receta.Descripcion</td>
+                                <td>
+                                    <ul>
+                                        @foreach (var ingrediente in @receta.ListaIngredientes)
+                                        {
+                                            <li>
+                                                @ingrediente.Nombre
+                                            </li>
+                                        }
+                                    </ul>
+                                </td>
+                                <td>@receta.TipoDePlato</td>
+                                <td>@receta.PaisDeOrigen</td>
+                                <td>@receta.Dificultad</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+</div>
+
+
+
+
+
+
+<!-- 
 <table class="table">
     <thead>
         <tr>
@@ -42,6 +82,5 @@
         }
     </tbody>
 </table>
-
-
+-->
 
