Filtro por ingredientes

--- a/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
@@ -13,6 +13,7 @@
         <partial name="/Views/Shared/_ComboTipoDeComida.cshtml">
         <partial name="/Views/Shared/_ComboPais.cshtml">
         <partial name="/Views/Shared/_ComboDificultad.cshtml">
+        <partial name="/Views/Shared/_ComboIngrediente.cshtml">
             <input type="submit" value="Filtrar" />
             <table class="table">
                 <thead>
