--- a/RecetasDeCocina.Web/Views/Ingrediente/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Ingrediente/Listar.cshtml
@@ -11,8 +11,8 @@
     <div>
         <h2 class="mb-4 text-center">@ViewData["Title"]</h2>
 
-        <table class="table">
-            <thead>
+        <table class="table table-hover">
+            <thead class="thead-dark">
                 <tr>
                     <th>Nombre</th>
                     <th>Categoría</th>
