--- a/RecetasDeCocina.Web/Views/Shared/_ComboDificultad.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_ComboDificultad.cshtml
@@ -1,6 +1,6 @@
 ﻿@using RecetasDeCocina.Data.Models
 
-<select id="Dificultad" name="Dificultad">
+<select id="Dificultad" name="Dificultad" class="form-control">
     <option>Dificultad</option>
     @foreach (Dificultad item in ViewBag.Dificultades)
     {
