--- a/RecetasDeCocina.Web/Views/Shared/_ComboTipoDeComida.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_ComboTipoDeComida.cshtml
@@ -1,6 +1,6 @@
 ﻿@using RecetasDeCocina.Data.Models
 
-<select id="TipoDePlato" name="TipoDePlato">
+<select id="TipoDePlato" name="TipoDePlato" class="form-control">
     <option>Tipo</option>
     @foreach (TipoDePlato item in ViewBag.Tipos)
     {
