--- a/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
+++ b/RecetasDeCocina.Web/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - RecetasDeCocina.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            &copy; 2023 - Recetas de cocina
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
