--- a/RecetasDeCocina.Web/Views/Usuario/MisRecetasFavoritas.cshtml
+++ b/RecetasDeCocina.Web/Views/Usuario/MisRecetasFavoritas.cshtml
@@ -2,7 +2,7 @@
 @model List<Receta>
 
 @{
-    ViewData["Title"] = "Mis Recetas Favoritas";
+    ViewData["Title"] = "Recetas Favoritas";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -12,10 +12,10 @@
         <tr>
             <th>Título</th>
             <th>Descripción</th>
+            <th>Ingredientes</th>
             <th>Tipo</th>
             <th>País</th>
             <th>Dificultad</th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -24,12 +24,26 @@
             <tr>
                 <td>@receta.Titulo</td>
                 <td>@receta.Descripcion</td>
+                <td>
+                    <ul>
+                        @foreach (var ingrediente in @receta.ListarIngredientes)
+                        {
+                            <li>
+                                @ingrediente.NombreDelIngrediente
+                            </li>
+                        }
+                    </ul>
+                </td>
                 <td>@receta.TipoDePlato</td>
                 <td>@receta.PaisDeOrigen</td>
                 <td>@receta.Dificultad</td>
-                <td>
-                </td>
+          
+
+
             </tr>
         }
     </tbody>
 </table>
+
+
+
