--- a/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
+++ b/RecetasDeCocina.Web/Views/Receta/Listar.cshtml
@@ -26,6 +26,9 @@
                 <div class="mb-3 mt-3">
                     <partial name="/Views/Shared/_ComboIngrediente.cshtml">
                 </div>
+                <div class="mb-3 mt-3">
+                    <partial name="/Views/Shared/_ComboPreferencia.cshtml">
+                </div>
                 <input type="submit" value="Filtrar" class="btn btn-dark fw-bold text-light p-1 sing-in rounded w-25 mb-3" />
             </div>
         </form>
@@ -36,9 +39,11 @@
                                 <th>Título</th>
                                 <th>Descripción</th>
                                 <th>Ingredientes</th>
+                                <th>Preferencias</th>
                                 <th>Tipo</th>
                                 <th>País</th>
                                 <th>Dificultad</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -57,9 +62,25 @@
                                             }
                                         </ul>
                                     </td>
+                                    <td>
+                                        <ul>
+                                            @foreach (var preferencia in @receta.PreferenciasAlimentarias)
+                                            {
+                                                <li>
+                                                    @preferencia.PreferenciaAlimentaria
+                                                </li>
+                                            }
+                                        </ul>
+                                    </td>
                                     <td>@receta.TipoDePlato</td>
                                     <td>@receta.PaisDeOrigen</td>
                                     <td>@receta.Dificultad</td>
+                                    <td>
+                                        <form action="/Usuario/GuardarRecetaFav" method="post">
+                                            <input type="hidden" name="idReceta" value="@receta.Id" />
+                                            <button type="submit" class="btn btn-primary">Agregar a favoritas</button>
+                                        </form>
+                                    </td>
                                 </tr>
                             }
                         </tbody>
