--- a/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
+++ b/RecetasDeCocina.Web/Views/RecetasPersonalizadas/GenerarRecetasPersonalizadas.cshtml
@@ -16,6 +16,7 @@
                             <th>Título</th>
                             <th>Descripción</th>
                             <th>Ingredientes</th>
+                            <th>Preferencias</th>
                             <th>Tipo</th>
                             <th>País</th>
                             <th>Dificultad</th>
@@ -37,6 +38,16 @@
                                         }
                                     </ul>
                                 </td>
+                                <td>
+                                    <ul>
+                                        @foreach (var preferencia in @receta.PreferenciasAlimentarias)
+                                        {
+                                            <li>
+                                                @preferencia.PreferenciaAlimentaria
+                                            </li>
+                                        }
+                                    </ul>
+                                </td>
                                 <td>@receta.TipoDePlato</td>
                                 <td>@receta.PaisDeOrigen</td>
                                 <td>@receta.Dificultad</td>
@@ -45,42 +56,3 @@
                     </tbody>
                 </table>
 </div>
-
-
-
-
-
-
-<!-- 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Título</th>
-            <th>Descripción</th>
-            <th>Ingredientes</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var receta in ViewBag.RecetasPersonalizadas)
-        {
-            <tr>
-                <td>@receta.Titulo</td>
-                <td>@receta.Descripcion</td>
-                <td>
-                    <ul>
-
-                        @foreach (var ingrediente in @receta.ListaIngredientes)
-                        {
-                            <li>
-                                @ingrediente.Nombre
-                            </li>
-                        }
-
-                    </ul>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
--->
-
