--- a/RecetasDeCocina.Web/Views/Usuario/Crear.cshtml
+++ b/RecetasDeCocina.Web/Views/Usuario/Crear.cshtml
@@ -4,48 +4,51 @@
     ViewData["Title"] = "Registro de Usuario";
 }
 
-<!--<h2>@ViewData["Title"]</h2>-->
-
 <div class="container w-50 my-5 px-0">
     <div>
         <h2 class="mb-4 text-center">@ViewData["Title"]</h2>
 
         <form asp-action="Crear" method="post">
             <div class="mb-3">
-                <label asp-for="NombreDeUsuario" class="form-label d-none">Nombre de Usuario</label>
+                <label asp-for="NombreDeUsuario" class="form-label ">Nombre de Usuario</label>
                 <input asp-for="NombreDeUsuario" class="form-control p-2" placeholder="Nombre" />
                 <span asp-validation-for="NombreDeUsuario" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Correo" class="form-label d-none">Correo Electrónico</label>
+                <label asp-for="Correo" class="form-label ">Correo Electrónico</label>
                 <input asp-for="Correo" class="form-control p-2" placeholder="Correo" />
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Contrasena" class="form-label d-none">Contraseña</label>
+                <label asp-for="Contrasena" class="form-label ">Contraseña</label>
                 <input asp-for="Contrasena" class="form-control p-2" placeholder="Contraseña" type="password" />
                 <span asp-validation-for="Contrasena" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="PreferenciasAlimentarias" class="form-label d-none">Preferencias Alimentarias</label>
-                <select asp-for="PreferenciasAlimentarias" class="form-control p-2">
-                    <option value="" disabled selected>Preferencia</option>
-                    <option value="EQUILIBRADA">Equilibrada</option>
-                    <option value="VEGETARIANO">Vegetariano</option>
-                    <option value="VEGANO">Vegano</option>
-                    <option value="SIN_GLUTEN">Sin Gluten</option>
-                    <option value="SIN_LACTOSA">Sin Lactosa</option>
-                </select>
+                <label asp-for="PreferenciasAlimentarias" class="form-label">Preferencias Alimentarias</label>
+                @foreach (var preferencia in ViewBag.PreferenciasAlimentarias)
+                {
+                    <div class=" form-check form-check-inline">
+                        <label for="@preferencia.Id">
+                            <input type="checkbox" name="idsPreferencias" value="@preferencia.Id" />
+                            @preferencia.PreferenciaAlimentaria
+                        </label>
+                    </div>
+                }
             </div>
             <div class="mb-3">
-                <label asp-for="AlimentosAlergicos" class="form-label d-none">Alimentos Alergicos</label>
-                <select asp-for="AlimentosAlergicos" class="form-control p-2">
-                    <option value="" disabled selected>Alergias</option>
-                    <option value="NINGUNO">Ninguno</option>
-                    <option value="MANI">Maní</option>
-                    <option value="MARISCOS">Mariscos</option>
-                    <option value="LECHE">Leche</option>
-                </select>
+                <label asp-for="AlimentosAlergicos" class="form-label ">Alimentos Alergicos</label>
+                <div class="form-check form-check-inline">
+                    @foreach (var ingrediente in ViewBag.IngredientesDisponibles)
+                    {
+                        <div class=" form-check form-check-inline">
+                            <label for="@ingrediente.Id">
+                                <input type="checkbox" name="ids" value="@ingrediente.Id" />
+                                @ingrediente.Nombre
+                            </label>
+                        </div>
+                    }
+                </div>
             </div>
             <button type="submit" class="btn btn-dark fw-bold text-light p-2 sing-in rounded w-100">Registrar</button>
         </form>
